; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/bfa/extr_bfa_svc.c_bfa_fcport_sm_enabling.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/bfa/extr_bfa_svc.c_bfa_fcport_sm_enabling.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_fcport_s = type { %struct.TYPE_3__*, i32, i32 }
%struct.TYPE_3__ = type { i32, i64 }
%struct.bfad_s = type { i32 }

@BFA_STRING_32 = common dso_local global i32 0, align 4
@bfa_fcport_sm_linkdown = common dso_local global i32 0, align 4
@bfa_fcport_sm_linkup = common dso_local global i32 0, align 4
@BFA_PORT_LINKUP = common dso_local global i32 0, align 4
@BFA_FALSE = common dso_local global i32 0, align 4
@bfa_fcport_sm_disabling = common dso_local global i32 0, align 4
@bfa_fcport_sm_disabling_qwait = common dso_local global i32 0, align 4
@BFA_PL_MID_HAL = common dso_local global i32 0, align 4
@BFA_PL_EID_PORT_DISABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"Port Disable\00", align 1
@KERN_INFO = common dso_local global i32 0, align 4
@bfa_log_level = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c"Base port disabled: WWN = %s\0A\00", align 1
@BFA_PORT_AEN_DISABLE = common dso_local global i32 0, align 4
@bfa_fcport_sm_stopped = common dso_local global i32 0, align 4
@bfa_fcport_sm_iocdown = common dso_local global i32 0, align 4
@BFA_PORT_AEN_DISCONNECT = common dso_local global i32 0, align 4
@bfa_fcport_sm_faa_misconfig = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bfa_fcport_s*, i32)* @bfa_fcport_sm_enabling to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_fcport_sm_enabling(%struct.bfa_fcport_s* %0, i32 %1) #0 {
  %3 = alloca %struct.bfa_fcport_s*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.bfad_s*, align 8
  store %struct.bfa_fcport_s* %0, %struct.bfa_fcport_s** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* @BFA_STRING_32, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  %12 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %13 = getelementptr inbounds %struct.bfa_fcport_s, %struct.bfa_fcport_s* %12, i32 0, i32 0
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to %struct.bfad_s*
  store %struct.bfad_s* %17, %struct.bfad_s** %7, align 8
  %18 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %19 = getelementptr inbounds %struct.bfa_fcport_s, %struct.bfa_fcport_s* %18, i32 0, i32 0
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %19, align 8
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @bfa_trc(%struct.TYPE_3__* %20, i32 %21)
  %23 = load i32, i32* %4, align 4
  switch i32 %23, label %95 [
    i32 132, label %24
    i32 130, label %24
    i32 129, label %28
    i32 134, label %45
    i32 135, label %46
    i32 128, label %78
    i32 131, label %82
    i32 133, label %86
  ]

24:                                               ; preds = %2, %2
  %25 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %26 = load i32, i32* @bfa_fcport_sm_linkdown, align 4
  %27 = call i32 @bfa_sm_set_state(%struct.bfa_fcport_s* %25, i32 %26)
  br label %101

28:                                               ; preds = %2
  %29 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %30 = call i32 @bfa_fcport_update_linkinfo(%struct.bfa_fcport_s* %29)
  %31 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %32 = load i32, i32* @bfa_fcport_sm_linkup, align 4
  %33 = call i32 @bfa_sm_set_state(%struct.bfa_fcport_s* %31, i32 %32)
  %34 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %35 = getelementptr inbounds %struct.bfa_fcport_s, %struct.bfa_fcport_s* %34, i32 0, i32 2
  %36 = load i32, i32* %35, align 4
  %37 = icmp ne i32 %36, 0
  %38 = xor i1 %37, true
  %39 = zext i1 %38 to i32
  %40 = call i32 @WARN_ON(i32 %39)
  %41 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %42 = load i32, i32* @BFA_PORT_LINKUP, align 4
  %43 = load i32, i32* @BFA_FALSE, align 4
  %44 = call i32 @bfa_fcport_scn(%struct.bfa_fcport_s* %41, i32 %42, i32 %43)
  br label %101

45:                                               ; preds = %2
  br label %101

46:                                               ; preds = %2
  %47 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %48 = call i32 @bfa_fcport_send_disable(%struct.bfa_fcport_s* %47)
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %50, label %54

50:                                               ; preds = %46
  %51 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %52 = load i32, i32* @bfa_fcport_sm_disabling, align 4
  %53 = call i32 @bfa_sm_set_state(%struct.bfa_fcport_s* %51, i32 %52)
  br label %58

54:                                               ; preds = %46
  %55 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %56 = load i32, i32* @bfa_fcport_sm_disabling_qwait, align 4
  %57 = call i32 @bfa_sm_set_state(%struct.bfa_fcport_s* %55, i32 %56)
  br label %58

58:                                               ; preds = %54, %50
  %59 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %60 = getelementptr inbounds %struct.bfa_fcport_s, %struct.bfa_fcport_s* %59, i32 0, i32 0
  %61 = load %struct.TYPE_3__*, %struct.TYPE_3__** %60, align 8
  %62 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 8
  %64 = load i32, i32* @BFA_PL_MID_HAL, align 4
  %65 = load i32, i32* @BFA_PL_EID_PORT_DISABLE, align 4
  %66 = call i32 @bfa_plog_str(i32 %63, i32 %64, i32 %65, i32 0, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %67 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %68 = getelementptr inbounds %struct.bfa_fcport_s, %struct.bfa_fcport_s* %67, i32 0, i32 1
  %69 = load i32, i32* %68, align 8
  %70 = call i32 @wwn2str(i8* %11, i32 %69)
  %71 = load i32, i32* @KERN_INFO, align 4
  %72 = load %struct.bfad_s*, %struct.bfad_s** %7, align 8
  %73 = load i32, i32* @bfa_log_level, align 4
  %74 = call i32 @BFA_LOG(i32 %71, %struct.bfad_s* %72, i32 %73, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i8* %11)
  %75 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %76 = load i32, i32* @BFA_PORT_AEN_DISABLE, align 4
  %77 = call i32 @bfa_fcport_aen_post(%struct.bfa_fcport_s* %75, i32 %76)
  br label %101

78:                                               ; preds = %2
  %79 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %80 = load i32, i32* @bfa_fcport_sm_stopped, align 4
  %81 = call i32 @bfa_sm_set_state(%struct.bfa_fcport_s* %79, i32 %80)
  br label %101

82:                                               ; preds = %2
  %83 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %84 = load i32, i32* @bfa_fcport_sm_iocdown, align 4
  %85 = call i32 @bfa_sm_set_state(%struct.bfa_fcport_s* %83, i32 %84)
  br label %101

86:                                               ; preds = %2
  %87 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %88 = call i32 @bfa_fcport_reset_linkinfo(%struct.bfa_fcport_s* %87)
  %89 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %90 = load i32, i32* @BFA_PORT_AEN_DISCONNECT, align 4
  %91 = call i32 @bfa_fcport_aen_post(%struct.bfa_fcport_s* %89, i32 %90)
  %92 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %93 = load i32, i32* @bfa_fcport_sm_faa_misconfig, align 4
  %94 = call i32 @bfa_sm_set_state(%struct.bfa_fcport_s* %92, i32 %93)
  br label %101

95:                                               ; preds = %2
  %96 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %3, align 8
  %97 = getelementptr inbounds %struct.bfa_fcport_s, %struct.bfa_fcport_s* %96, i32 0, i32 0
  %98 = load %struct.TYPE_3__*, %struct.TYPE_3__** %97, align 8
  %99 = load i32, i32* %4, align 4
  %100 = call i32 @bfa_sm_fault(%struct.TYPE_3__* %98, i32 %99)
  br label %101

101:                                              ; preds = %95, %86, %82, %78, %58, %45, %28, %24
  %102 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %102)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @bfa_trc(%struct.TYPE_3__*, i32) #2

declare dso_local i32 @bfa_sm_set_state(%struct.bfa_fcport_s*, i32) #2

declare dso_local i32 @bfa_fcport_update_linkinfo(%struct.bfa_fcport_s*) #2

declare dso_local i32 @WARN_ON(i32) #2

declare dso_local i32 @bfa_fcport_scn(%struct.bfa_fcport_s*, i32, i32) #2

declare dso_local i32 @bfa_fcport_send_disable(%struct.bfa_fcport_s*) #2

declare dso_local i32 @bfa_plog_str(i32, i32, i32, i32, i8*) #2

declare dso_local i32 @wwn2str(i8*, i32) #2

declare dso_local i32 @BFA_LOG(i32, %struct.bfad_s*, i32, i8*, i8*) #2

declare dso_local i32 @bfa_fcport_aen_post(%struct.bfa_fcport_s*, i32) #2

declare dso_local i32 @bfa_fcport_reset_linkinfo(%struct.bfa_fcport_s*) #2

declare dso_local i32 @bfa_sm_fault(%struct.TYPE_3__*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
